Working webpage that loads d3.

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <title></title>
 </head>
 <body>
-<div id="chart">Yeeeewwww</div>
-<script>
-    console.log('dddeexxxxe');
-</script>
+<div id="chart"></div>
+<script src="./d3.js"></script>
 <script src="./chart.js"></script>
 </body>
 </html>
