--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -3,11 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link ref="chart.css"/>
+    <link rel='stylesheet' href="./chart.css"/>
 </head>
 <body>
 <div id="chart"></div>
 <script src="./d3.js"></script>
-<script src="./chart.js"></script>
+<script src="./tutorial.js"></script>
 </body>
 </html>
