--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link ref="chart.css"/>
+    <link rel='stylesheet' href="./chart.css"/>
 </head>
 <body>
 <div id="chart"></div>
