Fix binning and axis width

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 <body>
 <div id="chart"></div>
 <script src="./d3.js"></script>
-<script src="./chart.js"></script>
+<script src="./histogram.js"></script>
 </body>
 </html>
