--- a/public/html/histogram.html
+++ b/public/html/histogram.html
@@ -3,11 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel='stylesheet' href="./chart.css"/>
+    <link rel='stylesheet' href="../chart.css"/>
 </head>
 <body>
 <div id="chart"></div>
-<script src="./d3.js"></script>
-<script src="./histogram.js"></script>
+<script src="../lib/d3.js"></script>
+<script src="../js/rank.js"></script>
 </body>
 </html>
